--- a/index.html
+++ b/index.html
@@ -8,24 +8,32 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- custom  css -->
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Font -->
     <title>Home</title>
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-transparent">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img src="img/Indowave-Logo.svg" alt="indowave" class="img-fluid" />
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span></span>
+          <span></span>
+          <span></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse"  id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-md-4">
+            <li class="nav-item mx-2">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item mx-md-4">
+            <li class="nav-item mx-2">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
